Hide fixed sharer on mobile and when ending section enter

--- a/assets/styles/tailwind.css
+++ b/assets/styles/tailwind.css
@@ -1,19 +1,3 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-.text-indent {
-  text-indent: 2em;
-}
-
-html {
-  scroll-behavior: smooth;
-}
-
-body {
-  font-size: 16px;
-
-  @media (min-width: 768px) {
-    font-size: 18px;
-  }
-}
